--- a/package.json
+++ b/package.json
@@ -10,17 +10,25 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@react-three/drei": "^10.1.2",
+    "@react-three/fiber": "^9.1.2",
     "@supabase/supabase-js": "^2.49.4",
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
     "cookie-parser": "^1.4.7",
+    "fabric": "^6.7.0",
     "framer-motion": "^12.10.5",
+    "gsap": "^3.13.0",
     "jsonwebtoken": "^9.0.2",
+    "konva": "^9.3.20",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "tailwind-merge": "^3.3.0"
+    "react-konva": "^19.0.5",
+    "tailwind-merge": "^3.3.0",
+    "three": "^0.176.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
