--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "resolutions": {
+    "postcss": "8.4.38"
+  },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@react-three/drei": "^10.1.2",
@@ -21,7 +24,9 @@
     "gsap": "^3.13.0",
     "jsonwebtoken": "^9.0.2",
     "konva": "^9.3.20",
+    "lucide-react": "^0.525.0",
     "next": "15.3.2",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -32,11 +37,11 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.11",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.7"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11"
   }
 }
