--- a/package.json
+++ b/package.json
@@ -15,22 +15,26 @@
     "@heroicons/react": "^2.2.0",
     "@react-three/drei": "^10.1.2",
     "@react-three/fiber": "^9.1.2",
+    "@reactflow/node-resizer": "^2.2.14",
     "@supabase/supabase-js": "^2.49.4",
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
     "cookie-parser": "^1.4.7",
+    "emailjs-com": "^3.2.0",
     "fabric": "^6.7.0",
     "framer-motion": "^12.10.5",
     "gsap": "^3.13.0",
     "jsonwebtoken": "^9.0.2",
     "konva": "^9.3.20",
     "lucide-react": "^0.525.0",
+    "lz-string": "^1.5.0",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-konva": "^19.0.5",
+    "reactflow": "^11.11.4",
     "tailwind-merge": "^3.3.0",
     "three": "^0.176.0",
     "uuid": "^11.1.0"
