--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "konva": "^9.3.20",
     "lucide-react": "^0.525.0",
     "lz-string": "^1.5.0",
-    "next": "15.3.2",
+    "next": "^16.1.1",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "react-konva": "^19.0.5",
     "reactflow": "^11.11.4",
